edits per feedback

--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -4,6 +4,12 @@
 
 This table lists the availability of various features on {CentOS} clients.
 
+[WARNING]
+====
+{centos} is not currently an officially supported client operating system.
+It may or may not be supported in a future version of {productname}.
+====
+
 The icons in this table indicate:
 
 * icon:check[role="green"] the feature is available on both traditional and Salt clients
