Revert "Feature Matrix"

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -8,10 +8,9 @@ Before you begin installation, ensure that you have:
 * Access to installation media
 * Environment meets the hardware and networking requirements
 
+You should also ensure that you understand the supported client operating systems.
+
 This section contains more information on each of these requirements.
-
-For a complete list of supported clients and features, see xref:client-configuration:supported-features.adoc[].
-
 
 [IMPORTANT]
 ====
