fixed missing entities

--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -5,7 +5,7 @@ This section contains information about registering traditional and Salt clients
 
 [IMPORTANT]
 ====
-{rhel} clients are based on {redhat} and are unrelated to {sleses}, RES, {redhat}, or {slesa}.
+{rhel} clients are based on {redhat} and are unrelated to {sleses}, RES, {redhat}, or {sles}.
 You are responsible for arranging access to {redhat} base media repositories and {rhela} installation media, as well as connecting {productname} Server to the {redhat} content delivery network.
 You must obtain support from {redhat} for all your {rhela} systems.
 If you do not do this, you might be violating your terms with {redhat}.
@@ -49,7 +49,7 @@ The URL will change depending on where the {redhat} client is registered.
 * {redhat} Satellite Server
 * {redhat} update infrastructure (RHUI) in the cloud
 
-This guide covers clients registered to {redhat} CDN. 
+This guide covers clients registered to {redhat} CDN.
 You must have at least one system registered to the CDN, with an authorized subscription for repository content.
 
 [IMPORTANT]
@@ -65,8 +65,8 @@ Entitlement certificates are embedded with expiration dates, which match the len
 To avoid disruption, you will need to repeat this process at the end of every support subscription period.
 ====
 
-{redhat} supplies the subscription-manager tool to manage subscription assignments. 
-It runs locally on the client system to track installed products and subscriptions. 
+{redhat} supplies the subscription-manager tool to manage subscription assignments.
+It runs locally on the client system to track installed products and subscriptions.
 Register to redhat.com with subscription-manager, then follow this procedure to obtain certificates.
 
 
