--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -35,10 +35,10 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 | {sle} 15 | {x86}_64, {ppc}, {ibmz}, ARM               | icon:check[role="green"]      | icon:check[role="green"]
 | {sle} 12 | {x86}_64, {ppc}, {ibmz}, ARM               | icon:check[role="green"]      | icon:check[role="green"]
 | {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz}  | icon:check[role="green"]      | icon:check[role="green"]
-| {sls} for SAP | {x86}_64, {ppc}                       | icon:check[role="green"]      | icon:check[role="green"]
-| {sls}-ES 8 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
-| {sls}-ES 7 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
-| {sls}-ES 6 | {x86}, {x86}_64                          | icon:check[role="green"]      | icon:check[role="green"]
+| {sles} for SAP | {x86}_64, {ppc}                       | icon:check[role="green"]      | icon:check[role="green"]
+| {sles}-ES 8 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
+| {sles}-ES 7 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
+| {sles}-ES 6 | {x86}, {x86}_64                          | icon:check[role="green"]      | icon:check[role="green"]
 | {rhel} 8 | {x86}_64                                   | icon:question[role="gray"]    | icon:question[role="gray"]
 | {rhel} 7 | {x86}_64                                   | icon:check[role="green"]      | icon:check[role="green"]
 | {rhel} 6 | {x86}, {x86}_64                            | icon:check[role="green"]      | icon:check[role="green"]
@@ -53,7 +53,7 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 == Supported {suse} Client Features
 
 This table lists the availability of various features on {suse} clients.
-This table covers all variants of the {sle} operating system, including {slsa}, {sleda}, {sls} for SAP, and {sls} for HPC.
+This table covers all variants of the {sle} operating system, including {slsa}, {sleda}, {sles} for SAP, and {sles} for HPC.
 
 For supported features on non-{suse} operating systems, see each operating system's section in this book.
 
