fix refs and adoc syntax

--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -35,7 +35,7 @@ psql (PostgreSQL) 10.9
 [WARNING]
 ====
 Always create a database backup before performing a migration.
-For more information about a database backup, see xref:bp_chap_suma_backup.adoc[].
+For more information about a database backup, see <<bp.chap.suma.backup>>.
 ====
 
 PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast upgrade:
@@ -76,7 +76,7 @@ rpm -q smdba
 
 .Procedure: Performing a Regular Upgrade
 . Perform a database backup.
-For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
+For more information on backing up, see <<bp.chap.suma.backup>>.
 . Start the upgrade:
 +
 ----
@@ -106,7 +106,7 @@ If the upgrade fails, the migration script will attempt to restore the database 
 .Procedure: Performing a Fast PostgreSQL Upgrade
 . Perform a database backup.
 Without a verified database backup, you must not initiate a fast upgrade.
-For more information on backing up, see xref:bp_chap_suma_backup.adoc[].
+For more information on backing up, see <<bp.chap.suma.backup>>.
 . Begin the upgrade:
 +
 ----
