--- a/adoc/reference-webui-systems.adoc
+++ b/adoc/reference-webui-systems.adoc
@@ -1046,7 +1046,7 @@ These are sorted via subtabs in centrally and locally managed files and a local 
 
 Using the appropriate buttons on a subtab, you can copy from one to the other subtabs.
 
-[Note]
+[NOTE]
 ====
 [guimenu]``Modify Files`` is not available on Salt based systems.
 ====
