Reorganize feature matrix: - Move supported features under 'Supported clients and features' (from each client's subsection) - Split SLES from the generic 'Supported clients and features' main page, for consistency with the other clients - Split SLES ES from RHEL supported features page, as ES has its own client configuration page - Some clarifications in the CentOS features page to make it clear what happens when you have ES and what happens when you do not - Ubuntu: more recent version first (like the others) and change some "not supported" features to question marks, as they will be supported in the future - Hide RHEL/SLES ES 8, as it is not (yet) supported (it will be in 4.0.4)

--- a/modules/client-configuration/pages/supported-features-debian.adoc
+++ b/modules/client-configuration/pages/supported-features-debian.adoc
@@ -1,10 +1,10 @@
-[[supported-features-ubuntu]]
-= Supported {ubuntu} Features
+[[supported-features-debian]]
+= Supported {debian} Features
 
 
-This table lists the availability of various features on {ubuntu} clients.
+This table lists the availability of various features on {debian} clients.
 
-ifeval::[{uyuni-content} == true]
+ifeval::[{suma-content} == true]
 [NOTE]
 ====
 {debian} is not an officially supported operating system in this version of {susemgr}.
@@ -21,9 +21,9 @@ The icons in this table indicate:
 
 
 [cols="1,1,1", options="header"]
-.Supported Features on {ubuntu} Operating Systems
+.Supported Features on {debian} Operating Systems
 |===
-| Feature | {ubuntu}{nbsp}16.04 | {ubuntu}{nbsp}18.04
+| Feature | {debian}{nbsp}9 | {debian}{nbsp}10
 | Client | icon:check[role="green"] | icon:check[role="green"]
 | Operating system packages | icon:times[role="danger"] | icon:times[role="danger"]
 | Registration | ``Salt`` | ``Salt``
@@ -56,7 +56,7 @@ The icons in this table indicate:
 | Configuration file management |  ``Salt`` | ``Salt``
 | Package profiles |  ``Salt``: Profiles supported, Sync not supported | ``Salt``: Profiles supported, Sync not supported
 | Power management |  icon:check[role="green"] | icon:check[role="green"]
-| Monitoring |  icon:times[role="danger"]  | ``Salt``
+| Monitoring |  ``Salt``  | ``Salt``
 | Docker buildhost |  icon:question[role="gray"]   | icon:question[role="gray"]
 | Build Docker image with OS | ``Salt`` | ``Salt``
 | Kiwi buildhost |   icon:times[role="danger"] | icon:times[role="danger"]
