--- a/modules/client-configuration/pages/supported-features-es.adoc
+++ b/modules/client-configuration/pages/supported-features-es.adoc
@@ -1,15 +1,8 @@
-[[supported-features-centos]]
-= Supported CentOS Features
+[[supported-features-es]]
+= Supported {sleses} Features
 
 
-This table lists the availability of various features on {CentOS} clients.
-
-[WARNING]
-====
-{centos} is not currently an officially supported client operating system. 
-It may or may not be supported in a future version of {productname}.
-However, {centos} with an {es} subscription is supported.
-====
+This table lists the availability of various features on {sleses} clients.
 
 The icons in this table indicate:
 
@@ -21,20 +14,20 @@ The icons in this table indicate:
 
 
 [cols="1,1,1", options="header"]
-.Supported Features on {centos} Operating Systems
+.Supported Features on {sleses} Operating Systems
 |===
-| Feature | {centos}{nbsp}6 | {centos}{nbsp}7
-| Client | icon:question[role="gray"] (plain CentOS) / icon:check[role="green"] (with {es}) | icon:question[role="gray"] (plain CentOS) / icon:check[role="green"] (with {es})
-| Operating system packages  |  icon:times[role="danger"] (plain CentOS) / icon:check[role="green"] (with {es}) | icon:times[role="danger"] (plain CentOS)/icon:check[role="green"] (with {es})
+| Feature | {slsa}{nbsp}ES{nbsp}6 |  {slsa}{nbsp}ES{nbsp}7
+| Client | icon:check[role="green"] | icon:check[role="green"]
+| Operating system packages | icon:check[role="green"] | icon:check[role="green"]
 | Registration | icon:check[role="green"] | icon:check[role="green"]
 | Install packages | icon:check[role="green"] | icon:check[role="green"]
-| Apply patches | icon:check[role="green"] (third-party service required for errata) | icon:check[role="green"] (third-party service required for errata)
+| Apply patches | icon:check[role="green"] | icon:check[role="green"]
 | Remote commands | icon:check[role="green"] | icon:check[role="green"]
 | System package states | ``Salt`` | ``Salt``
 | System custom states | ``Salt`` | ``Salt``
 | Group custom states | ``Salt`` | ``Salt``
-| Organization custom states    | ``Salt`` | ``Salt``
-| System set manager (SSM) | icon:check[role="green"] | icon:check[role="green"]
+| Organization custom states | ``Salt`` | ``Salt``
+| System set manager (SSM) | ``Salt`` | ``Salt``
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
 | Basic Virtual Guest Management icon:asterisk[role="none"] | ``Traditional`` | icon:check[role="green"]
 | Advanced Virtual Guest Management icon:asterisk[role="none"] | icon:times[role="danger"] | ``Salt``
@@ -49,20 +42,20 @@ The icons in this table indicate:
 | Software crash reporting | icon:times[role="danger"] | ``Traditional``
 | Staging (pre-download of packages) | icon:check[role="green"] | icon:check[role="green"]
 | Duplicate package reporting | icon:check[role="green"] | icon:check[role="green"]
-| CVE auditing |  icon:check[role="green"] | icon:check[role="green"]
+| CVE auditing | icon:check[role="green"] | icon:check[role="green"]
 | SCAP auditing | icon:check[role="green"] | icon:check[role="green"]
 | Package verification | ``Traditional`` | ``Traditional``
 | Package locking | ``Traditional`` | ``Traditional``
-| System locking |  ``Traditional`` | ``Traditional``
+| System locking | ``Traditional`` | ``Traditional``
 | System snapshot | ``Traditional`` | ``Traditional``
-| Configuration file management |  icon:check[role="green"] | icon:check[role="green"]
+| Configuration file management | icon:check[role="green"] | icon:check[role="green"]
 | Snapshots and profiles |  ``Traditional``. +
 ``Salt``: Profiles supported, Sync not supported | ``Traditional``. +
 ``Salt``: Profiles supported, Sync not supported
 | Power management |  icon:check[role="green"] | icon:check[role="green"]
 | Monitoring |  ``Salt`` | ``Salt``
 | Docker buildhost |  icon:times[role="danger"] | icon:times[role="danger"]
-| Build Docker image with OS | icon:times[role="danger"] | icon:times[role="danger"]
+| Build Docker image with OS | icon:question[role="gray"] | icon:question[role="gray"]
 | Kiwi buildhost |  icon:times[role="danger"] | icon:times[role="danger"]
 | Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]
 |===
