--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -3,6 +3,14 @@ ifndef::backend-pdf[]
 
 * xref:client-config-overview.adoc[Client Configuration Guide]
 ** xref:supported-features.adoc[Supported Clients and Features]
+*** xref:supported-features-sles.adoc[SLES Supported Features]
+*** xref:supported-features-es.adoc[SLES-ES Supported Features]
+*** xref:supported-features-rh.adoc[Red Hat Supported Features]
+*** xref:supported-features-centos.adoc[CentOS Features]
+*** xref:supported-features-ubuntu.adoc[Ubuntu Supported Features]
+ifeval::[{uyuni-content} == true]
+*** xref:supported-features-debian.adoc[Debian Supported Features]
+endif::[]
 // Manual Registration
 ** xref:registration-overview.adoc[Registration Overview]
 *** xref:registration-webui.adoc[Registering with the Web UI]
@@ -23,11 +31,8 @@ ifndef::backend-pdf[]
 ** xref:non-suse-clients.adoc[Other Clients]
 *** xref:clients-sleses.adoc[Expanded Support Clients]
 *** xref:clients-rh.adoc[Red Hat Clients]
-**** xref:supported-features-rh.adoc[Red Hat Supported Features]
 *** xref:clients-centos.adoc[CentOS Clients]
-**** xref:supported-features-centos.adoc[CentOS Supported Features]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
-**** xref:supported-features-ubuntu.adoc[Ubuntu Supported Features]
 // Virtualization
 ** xref:virtualization.adoc[Virtualization]
 *** xref:virt-xenkvm.adoc[Virtualization with Xen and KVM]
@@ -69,6 +74,14 @@ include::./branding/pdf/entities.adoc[]
 include::modules/client-configuration/pages/client-config-overview.adoc[leveloffset=+1]
 
 include::modules/client-configuration/pages/supported-features.adoc[leveloffset=+2]
+include::modules/client-configuration/pages/supported-features-sles.adoc[leveloffset=+3]
+include::modules/client-configuration/pages/supported-features-es.adoc[leveloffset=+3]
+include::modules/client-configuration/pages/supported-features-rh.adoc[leveloffset=+3]
+include::modules/client-configuration/pages/supported-features-centos.adoc[leveloffset=+3]
+include::modules/client-configuration/pages/supported-features-ubuntu.adoc[leveloffset=+3]
+ifeval::[{uyuni-content} == true]
+include::modules/client-configuration/pages/supported-features-debian.adoc[leveloffset=+3]
+endif::[]
 
 // Manual Registration
 
@@ -109,15 +122,9 @@ include::modules/client-configuration/pages/clients-sleses.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/supported-features-rh.adoc[leveloffset=+3]
-
 include::modules/client-configuration/pages/clients-centos.adoc[leveloffset=+2]
 
-include::modules/client-configuration/pages/supported-features-centos.adoc[leveloffset=+3]
-
 include::modules/client-configuration/pages/clients-ubuntu.adoc[leveloffset=+2]
-
-include::modules/client-configuration/pages/supported-features-ubuntu.adoc[leveloffset=+3]
 
 // Virtualization
 include::modules/client-configuration/pages/virtualization.adoc[leveloffset=+1]
