Update Ubuntu supported features
Add question marks for the features that will be coming.

Also, change the supportability statement of Debian to something that means "no support from SUSE but it's supposed to work"

--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -6,7 +6,7 @@ This table lists the availability of various features on {ubuntu} clients.
 
 [NOTE]
 ====
- Debian is not currently supported by {suse}.
+ Debian is not an officially supported operating system in this version of {susemgr}.
 ====
 
 The icons in this table indicate:
@@ -25,14 +25,14 @@ The icons in this table indicate:
 | Client  | icon:check[role="green"] | icon:check[role="green"]
 | Registration | ``Salt`` | ``Salt``
 | Install packages | ``Salt`` | ``Salt``
-| Apply patches | icon:times[role="danger"] | icon:times[role="danger"]
+| Apply patches | icon:question[role="gray"] | icon:question[role="gray"]
 | Remote commands | ``Salt`` | ``Salt``
 | System package states | ``Salt`` | ``Salt``
 | System custom states | ``Salt`` | ``Salt``
 | Group custom states | ``Salt`` | ``Salt``
 | Organization custom states    | ``Salt`` | ``Salt``
 | System set manager (SSM) | ``Salt`` | ``Salt``
-| Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
+| Service pack migration | N/A | N/A
 | Basic Virtual Guest Management icon:asterisk | ``Salt`` | ``Salt``
 | Advanced Virtual Guest Management icon:asterisk | ``Salt`` | ``Salt``
 | Virtual Guest Installation (Kickstart), as Host OS | icon:times[role="danger"] | icon:times[role="danger"]
@@ -42,9 +42,9 @@ The icons in this table indicate:
 | Works with {productname} Proxy | ``Salt`` | ``Salt``
 | Action chains | ``Salt`` | ``Salt``
 | Software crash reporting | icon:times[role="danger"] | icon:times[role="danger"]
-| Staging (pre-download of packages) |  icon:times[role="danger"] | icon:times[role="danger"]
+| Staging (pre-download of packages) |  icon:question[role="gray"] | icon:question[role="gray"]
 | Duplicate package reporting | ``Salt`` | ``Salt``
-| CVE auditing |  icon:times[role="danger"] | icon:times[role="danger"]
+| CVE auditing |  icon:question[role="gray"] | icon:question[role="gray"]
 | SCAP auditing | icon:question[role="gray"] | icon:question[role="gray"]
 | Package verification | icon:times[role="danger"] | icon:times[role="danger"]
 | Package locking | icon:times[role="danger"] | icon:times[role="danger"]
