--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -10,40 +10,63 @@ This image shows the main ports used in {productname}:
 
 image::ports_diagram.png[]
 
-In this section:
-
-* External inbound port: a port to be opened on the {productname} Server or Proxy
-* External outbound port: a destination port that the {productname} Server or Proxy can use to open connections
-* Internal port: a port only used internally, that is only accessible from ``localhost``.
 
 
+== External Inbound Server Ports
 
-== External Server Ports
+External inbound ports must be opened to configure a firewall on the {productname} Server to protect the server from unauthorized access.
 
-[cols="1,1,1,1,1", options="header"]
+Opening these ports allows external network traffic to access the {productname} Server.
+
+
+[cols="1,1,1,1", options="header"]
 .External Port Requirements for {productname} Server
 |===
-| Port number | Direction | Protocol | Used By | Notes
-| 67          | Inbound   | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
-| 69          | Inbound   | TCP/UDP  | TFTP | Required if server is used as a PXE server for automated client installation.
-| 80          | Inbound   | TCP      | HTTP | Required temporarily for some bootstrap repositories and automated installations.
+| Port number | Protocol | Used By | Notes
+| 67          | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
+| 69          | TCP/UDP  | TFTP    | Required if server is used as a PXE server for automated client installation.
+| 80          | TCP      | HTTP    | Required temporarily for some bootstrap repositories and automated installations.
 Port 80 is not used to serve the {webui}.
-| 80          | Outbound  | TCP      | HTTP | Required for {scc}.
-| 443         | Inbound   | TCP      | HTTPS | {webui}, client, and proxy requests.
-| 443         | Outbound  | TCP      | HTTPS | Required for {scc}.
-| 4505         | Inbound  | TCP | salt | Required to accept communication requests from clients.
+| 443         | TCP      | HTTPS   | {webui}, client, and proxy requests.
+| 4505        |  TCP     | salt    | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to receive commands from the Salt master.
-| 4506        | Inbound  | TCP | salt | Required to accept communication requests from clients.
+| 4506        | TCP      | salt    | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to report results back to the Salt master.
-| 5222        | Inbound   | TCP      | osad  | Required to push OSAD actions to clients.
-| 5269        | Inbound/Outbound | TCP | jabberd | Required to push actions to and from a proxy.
-| 8050         | Inbound | TCP | websockify | Required to access the graphical console of virtual machines with the {webui}.
-| 25151        |         | TCP | Cobbler |
+| 5222        | TCP      | osad    | Required to push OSAD actions to clients.
+| 5269        | TCP      | jabberd | Required to push actions to and from a proxy.
+| 8050        | TCP      | websockify | Required to access the graphical console of virtual machines with the {webui}.
+| 25151       | TCP      | Cobbler |
+|===
+
+
+
+== External Outbound Server Ports
+
+External outbound ports must be opened to configure a firewall on the {productname} Server to restrict what the server can access.
+
+Opening these ports allows network traffic from the {productname} Server to communicate with external services.
+
+[cols="1,1,1,1", options="header"]
+.External Port Requirements for {productname} Server
+|===
+| Port number | Protocol | Used By | Notes
+
+Port 80 is not used to serve the {webui}.
+| 80          | TCP | HTTP       | Required for {scc}.
+| 443         | TCP | HTTPS      | Required for {scc}.
+| 5269        | TCP | jabberd    | Required to push actions to and from a proxy.
+| 8050        | TCP | websockify | Required to access the graphical console of virtual machines with the {webui}.
+| 25151       | TCP | Cobbler    |
 |===
 
 
 
 == Internal Server Ports
+
+Internal port are used internally by the {productname} Server.
+Internal ports are only accessible from ``localhost``.
+
+In most cases, you will not need to adjust these ports.
 
 [cols="1,1", options="header"]
 .Internal Port Requirements for {productname} Server
@@ -72,30 +95,53 @@ cat /proc/sys/net/ipv4/ip_local_port_range
 
 
 
-== External Proxy Ports
+== External Inbound Proxy Ports
 
-[cols="1,1,1,1,1", options="header"]
+External inbound ports must be opened to configure a firewall on the {productname} Proxy to protect the proxy from unauthorized access.
+
+Opening these ports allows external network traffic to access the {productname} proxy.
+
+[cols="1,1,1,1", options="header"]
 .External Port Requirements for {productname} Proxy
 |===
-| Port number | Direction | Protocol | Used By | Notes
-| 22          | Inbound   |          | | Required for ssh-push and ssh-push-tunnel contact methods.
+| Port number | Protocol | Used By | Notes
+| 22          |          |         | Required for ssh-push and ssh-push-tunnel contact methods.
 Clients connected to the proxy initiate check in on the server and hop through to clients.
-| 67          | Inbound   | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
-| 69          | Inbound   | TCP/UDP  | TFTP | Required if the server is used as a PXE server for automated client installation.
-| 80          | Outbound  |           | | Used to reach the server.
-| 443         | Inbound   | TCP      | HTTPS | {webui}, client, and proxy requests.
-| 443         | Outbound  | TCP      | HTTPS | Required for {scc}.
-| 4505         | Inbound  | TCP | salt | Required to accept communication requests from clients.
+| 67          | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
+| 69          | TCP/UDP  | TFTP    | Required if the server is used as a PXE server for automated client installation.
+| 443         | TCP      | HTTPS   | {webui}, client, and proxy requests.
+| 4505        | TCP      | salt    | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to receive commands from the Salt master.
-| 4506        | Inbound  | TCP | salt | Required to accept communication requests from clients.
+| 4506        | TCP      | salt    | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to report results back to the Salt master.
-| 5222        | Inbound   | TCP     |  | Required to push OSAD actions to clients.
-| 5269        | Inbound/Outbound | TCP | | Required to push actions to and from the server.
+| 5222        | TCP      |         | Required to push OSAD actions to clients.
+| 5269        | TCP      |         | Required to push actions to and from the server.
+|===
+
+
+
+== External Outbound Proxy Ports
+
+External outbound ports must be opened to configure a firewall on the {productname} Proxy to restrict what the proxy can access.
+
+Opening these ports allows network traffic from the {productname} Proxy to communicate with external services.
+
+[cols="1,1,1,1", options="header"]
+.External Port Requirements for {productname} Proxy
+|===
+| Port number | Protocol | Used By | Notes
+| 80          |          |         | Used to reach the server.
+| 443         | TCP      | HTTPS   | Required for {scc}.
+| 5269        | TCP      |         | Required to push actions to and from the server.
 |===
 
 
 
 == External Client Ports
+
+External client ports must be opened to configure a firewall between the {productname} Server and its clients.
+
+In most cases, you will not need to adjust these ports.
 
 [cols="1,1,1,1", options="header"]
 .External Port Requirements for {productname} Clients
