Explicitly disallow PackageHub
At least one customer has already had trouble with this

--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -9,16 +9,17 @@ This section covers {productname} Server setup, using these procedures:
 * Synchronize the {sle} product channel from {scc}
 
 [WARNING]
-.Third Party Software
+.Installation of software on {productname} hosts
 --
 {productname} is part of the {sle} 4.0 product family and thus compatible with the software shipped with {sles}.
 
-{productname} is a complex system, and therefore installing third party software is not allowed.
+{productname} is a complex system, and therefore installing software is not allowed.
+
 Installing monitoring software provided by a third party vendor is allowed only if you do not exchange basic libraries such as SSL, cryptographic software, and similar tools.
 As part of providing product support, SUSE reserves the right to ask to remove any third party software (and associated configuration changes) and then to reproduce the problem on a clean system.
+
+https://packagehub.suse.com/[SUSE PackageHub] provides community Packages for {sles}. PackageHub may bring newer packages to the {productname} Server and {productname} Proxy, potentially causing unrecoverable collateral damages and errors which will require reinstallation of {productname}. Do not enable the PackageHub repositories on the {productname} hosts.
 --
-
-
 
 == Set up {productname} with YaST
 
