--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -35,7 +35,7 @@ For more about kernel parameters, see xref:salt:formula-pxe.adoc[].
 
 == Offline Terminal Updates
 
-If there is low bandwidth or an unstable connection between the branch server and the terminal, images can be cached in advance and the upgrade performed on the terminals later on.
+If there is low bandwidth between the branch server and the terminal, or for optimization of terminal update process, POS images can be cached in advance on the terminal and the upgrade performed on the terminals later on.
 
 This functionality requires the terminal to have a dedicated service partition. A service partition is a partition mounted as `/srv/saltboot`.
 This partition must be created before the system partition and large enough to store a system image.
