--- a/modules/retail/pages/retail-offline.adoc
+++ b/modules/retail/pages/retail-offline.adoc
@@ -7,7 +7,7 @@ This feature uses caching to perform updates.
 
 [IMPORTANT]
 ====
-Offline features are available only for {productname} Server 4.0 and above.
+Offline features and features relying on caching are available only for {productname} Server 4.0 and above.
 ====
 
 
@@ -33,24 +33,24 @@ For more about kernel parameters, see xref:salt:formula-pxe.adoc[].
 
 
 
-== Offline Terminal Updates
+== Cached Terminal Updates
 
 If there is low bandwidth or an unstable connection between the branch server and the terminal, images can be cached in advance and the upgrade performed on the terminals later on.
 
 This functionality requires the terminal to have a dedicated service partition. A service partition is a partition mounted as `/srv/saltboot`.
-This partition must be created before the system partition and large enough to store a system image.
+This partition must be created before the system partition and large enough to store a POS image.
 To ensure that terminals will always have such a partition, use the Saltboot formula for terminal hardware type to specify the partition details.
 For more information, see xref:salt:formula-saltboot.adoc[].
 
-When the service partition is set up on the terminal, a system image can be downloaded in advance by applying the `saltboot.cache_image` state:
+When the service partition is set up on the terminal, a POS image can be downloaded in advance by applying the `saltboot.cache_image` state:
 
 ----
 salt $TERMINALID state.apply saltboot.cache_image
 ----
 
-This can be done regularly to ensure that terminals always have an uptodate system image downloaded.
+This can be done regularly to ensure that terminals always have an uptodate POS image downloaded.
 
-When the terminal is rebooted and an uptodate system image is found in the service partition, the terminal will automatically use this cached image for system redeployment.
+When the terminal is rebooted and an uptodate POS image is found in the service partition, the terminal will automatically use this cached image for system redeployment.
 
 ////
 // If a procedure is wanted we can use this as a template
