Fix non-working links in retail install
- two links in retail install were missing .adoc suffix
- add saltboot diagram to the Terminal ops as a boot process

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -11,6 +11,7 @@ ifndef::backend-pdf[]
 *** xref:retail-install-setup.adoc[Setting up]
 // Terminal ops
 ** xref:retail-deploy-terminals.adoc[Deploying Terminals]
+*** xref:retail-saltboot-diagram.adoc[Terminal Boot Process]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-offline.adoc[Offline Use]
 *** xref:retail-terminal-ratelimiting.adoc[Rate Limiting Terminals]
@@ -58,7 +59,11 @@ include::modules/retail/pages/retail-network-arch.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-install-setup.adoc[leveloffset=+3]
 
+// Terminal Ops
+
 include::modules/retail/pages/retail-deploy-terminals.adoc[leveloffset=+2]
+
+include::modules/retail/pages/retail-saltboot-diagram.adoc[leveloffset=+3]
 
 include::modules/retail/pages/retail-terminal-names.adoc[leveloffset=+3]
 
