--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -41,7 +41,7 @@ yast susemanager_setup
 . Follow the prompts to set up your account.
 Ensure you take note of the passwords you set, you will need them later on.
 
-Continue with general {susemgr} configuration and channel synchronization at xref:installation:server-setup[].
+Continue with general {susemgr} configuration and channel synchronization at xref:installation:server-setup.adoc[].
 
 == Installing {smr} Branch Server
 
@@ -77,7 +77,7 @@ For more information about activation keys, see xref:client-configuration:client
 * SLE-Module-Server-Applications15-SP1-Pool for x86_64 SMRBS 4.0
 * SLE-Module-Server-Applications15-SP1-Updates for x86_64 SMRBS 4.0
 * SLE-Product-SUSE-Manager-Retail-Branch-Server-4.0-Updates for x86_64
-. Use this activation key in {susemgrproxy} registration at xref:installation:proxy-registration[].
+. Use this activation key in {susemgrproxy} registration at xref:installation:proxy-registration.adoc[].
 
 
 [WARNING]
