Apply suggestions from code review
Co-Authored-By: Karl Eichwalder <ke@suse.de>

--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -17,13 +17,14 @@ Branch servers are configured using formulas. Formulas can be configured using {
 To fully configure {smr} environment, following formulas need to be enabled and configured for branch server:
 
 * Branch Network Formula, see xref:salt:formula-branchnetwork.adoc[]
-* Dhcpd Formula, see xref:salt:formula-bind.adoc[]
-* Bind Formula, see xref:salt:formula-dhcpd.adoc[]
+* Bind Formula, see xref:salt:formula-bind.adoc[]
+* Dhcpd Formula, see xref:salt:formula-dhcpd.adoc[]
 * PXE Formula, see xref:salt:formula-pxe.adoc[]
 * TFTP Formula, see xref:salt:formula-tftpd.adoc[]
 * Vsftp Formula, see xref:salt:formula-vsftpd.adoc[]
 
-Optionally [systemitem]``Image Synchronization Formula`` can be enabled and configured as well, see xref:salt:formula-imagesync.adoc[].
+Optionally, [systemitem]``Image Synchronization Formula`` can also be enabled and configured.
+For more information, see xref:salt:formula-imagesync.adoc[].
 
 [IMPORTANT]
 ====
