--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -1,7 +1,7 @@
 [[retail-install-setup]]
 = Setting up
 
-This section requires installed and configured {susemgr} Server,at least one {smr} branch server and at least one {susemgr} build host.
+This section requires an installed and configured {susemgr} Server, one or more {smr} branch servers, and one or more {susemgr} build host.
 
 Next steps in configuring {smr} environment are:
 
@@ -13,7 +13,7 @@ These steps are usually performed multiple times in lifetime of {smr} and are lo
 
 Typically POS images are periodically rebuild when updated packages are available and then synchronized to the {smr} branch servers before update window.
 
-Configuration of {smr} branch server services has to be done each time new branch server is registered.
+Configuration of {smr} branch server services have to be done each time a new branch server is registered.
 
 == Prepare and Build Terminal Images
 
@@ -21,10 +21,10 @@ For information about {susemgr} image building, see xref:administration:image-ma
 
 {smr} POS images are images specifically tailored for {smr} environment and designed to be deployed using PXE booting mechanism.
 
-=== POS image templates
+=== POS Image Templates
 
 As starting point, {suse} provides basic templates at https://github.com/SUSE/manager-build-profiles/tree/master/OSImage[].
-These templates needs to be adapted for specific usecases, for example by including specific applications, configuration and users.
+These templates need to be adapted for specific usecases, for example by including specific applications, configuration settings, and users.
 
 [IMPORTANT]
 ====
@@ -58,7 +58,7 @@ For the information about the possible network topologies, see xref:retail:retai
 
 All configuration of branch server services is done on {susemgr} server.
 The configuration is then applied to the selected branch server through salt states.
-{susemgr} Formulas with Forms functionality is used to configure branch server services, however there are multiple ways to configure them.
+{susemgr} Formulas with Forms functionality is used to configure branch server services, however there are multiple ways to configure them:
 
 * {smr} provided command line tool [command]``retail_branch_init``
 * {smr} provided mass import command line tool [command]``retail_yaml``
