--- a/modules/reference/pages/systems/system-details/sd-reactivation.adoc
+++ b/modules/reference/pages/systems/system-details/sd-reactivation.adoc
@@ -3,7 +3,7 @@
 
 Reactivation keys include this system's ID, history, groups, and channels.
 This key can then be used only once with the [command]``rhnreg_ks`` command line utility to re-register this system and regain all {productname} settings.
-Unlike typical activation keys, which are not associated with a specific system ID, keys created here do not show up within the menu:Main Menu[Systems > Activation Keys] page.
+Unlike typical activation keys, which are not associated with a specific system ID, keys created here do not show up within the menu:Systems[Activation Keys] page.
 
 image::system_details_reactivation.png[scaledwidth=80%]
 
@@ -11,13 +11,14 @@ Reactivation keys can be combined with activation keys to aggregate the settings
 For example:
 
 ----
-rhnreg_ks --server=`server-url`\
-  --activationkey=`reactivation-key`,`activationkey`--force
+rhnreg_ks --server=<server-url> \
+          --activationkey=<reactivation-key>,<activationkey> \
+          --force
 ----
 
 [WARNING]
 ====
 When autoinstalling a system with its existing {productname} profile, the profile uses the system-specific activation key created here to re-register the system and return its other {productname} settings.
-For this reason, you should not regenerate, delete, or use this key (with [command]``rhnreg_ks``) while a profile-based autoinstallation is in progress.
+For this reason, you must not regenerate, delete, or use this key (with [command]``rhnreg_ks``) while a profile-based autoinstallation is in progress.
 If you do, the autoinstallation will fail.
 ====
