autoyast and salt
close https://github.com/SUSE/spacewalk/issues/9892

--- a/modules/reference/pages/systems/autoinst-overview.adoc
+++ b/modules/reference/pages/systems/autoinst-overview.adoc
@@ -8,14 +8,17 @@ In the following section, {ay} and {ay} features apply for {sle} client systems 
 For {rhela} systems, use Kickstart and Kickstart features.
 ====
 
+////
 .Auto-Installing Salt Clients Currently Not Supported
 [IMPORTANT]
 ====
 This procedure will work for traditionally  managed systems (system type [systemitem]``management``).
 It is not currently available for systems using Salt (system type [systemitem]``salt``).
 ====
+////
 
-{ay} and Kickstart configuration files allow administrators to create an environment for automating otherwise time-consuming system installations, such as multiple servers or workstations. {ay} files have to be uploaded to be managed with {productname}.
+{ay} and Kickstart configuration files allow administrators to create an environment for automating otherwise time-consuming system installations, such as multiple servers or workstations.
+{ay} files have to be uploaded to be managed with {productname}.
 Kickstart files can be created, modified, and managed within the {productname} Web interface.
 
 {productname} also features the Cobbler installation server.
