--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -59,6 +59,8 @@ endif::[]
 ** xref:using-ssm.adoc[Using the System Set Manager]
 // Troubleshooting
 ** xref:tshoot-clients.adoc[Troubleshooting Clients]
+// Appendices
+** xref:autoyast-example.adoc[AutoYaST Example]
 // Licence
 //** xref:common_gfdl1.2_i.adoc[License]
 
@@ -168,6 +170,9 @@ include::modules/client-configuration/pages/using-ssm.adoc[leveloffset=+1]
 
 // Troubleshooting
 include::modules/client-configuration/pages/tshoot-clients.adoc[leveloffset=+1]
+
+// Appendices
+include::modules/administration/pages/autoyast-example.adoc[leveloffset=+1]
 
 // Licence
 include::modules/client-configuration/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
