--- a/modules/reference/pages/systems/autoinst-overview.adoc
+++ b/modules/reference/pages/systems/autoinst-overview.adoc
@@ -35,5 +35,5 @@ This overview page displays the status of automated installations (Kickstart and
 
 In the upper right area is the menu:Autoinstallation Actions[] section, which contains a series of links to management actions for your Kickstart or {ay}  profiles.
 
-For more on {ay}, see xref:client-configuration:autoyast.adoc[].
-For more on Kickstart, see xref:client-configuration:kickstart.adoc[].
+* For more on {ay}, see xref:client-configuration:autoyast.adoc[].
+* For more on Kickstart, see xref:client-configuration:kickstart.adoc[].
