--- a/modules/retail/pages/retail-requirements.adoc
+++ b/modules/retail/pages/retail-requirements.adoc
@@ -24,7 +24,7 @@ xref:installation:general-requirements.adoc[].
 |                          | _Production Server_ Minimum 32{nbsp}GB
 | Disk Space:              | [path]``/`` _(root)_ 24{nbsp}GB
 |                          | [path]``/var/lib/pgsql`` Minimum 50{nbsp}GB
-|                          | [path]``/srv/`` Minimum 50{nbsp}GB
+|                          | [path]``/srv`` Minimum 50{nbsp}GB
 |                          | [path]``/var/spacewalk`` Minimum 50{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
 |===
 
@@ -38,7 +38,7 @@ xref:installation:general-requirements.adoc[].
 | RAM:                     | _Test Server_ Minimum 2{nbsp}GB
 |                          | _Production Server_ Minimum 8{nbsp}GB
 | Disk Space:              | [path]``/`` _(root)_ Minimum 24{nbsp}GB
-|                          | [path]``/srv/`` Minimum 100{nbsp}GB
+|                          | [path]``/srv`` Minimum 100{nbsp}GB
 |                          | [path]``/var/cache`` Minimum 100{nbsp}GB
 |===
 
@@ -52,7 +52,7 @@ xref:installation:general-requirements.adoc[].
 | RAM:                     | _Test Server_ Minimum 2{nbsp}GB
 |                          | _Production Server_ Minimum 4{nbsp}GB
 | Disk Space:              | [path]``/`` _(root)_ Minimum 24{nbsp}GB
-|                          | [path]``/var/lib/Kiwi`` Minimum 10GB
+|                          | [path]``/var/lib/Kiwi`` Minimum 10{nbsp}GB
 |===
 
 .Network Requirements
