instead of autoyast.adoc now reference client-automating-installation.adoc

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -24,7 +24,7 @@ endif::[]
 ** xref:autoinstallation-methods.adoc[Automating Client Installation]
 *** xref:client-automating-preparation.adoc[Preparation]
 *** xref:client-automating-installation.adoc[Installation]
-*** xref:autoyast.adoc[AutoYaST]
+// *** xref:autoyast.adoc[AutoYaST]
 *** xref:kickstart.adoc[Kickstart]
 *** xref:cobbler.adoc[Cobbler]
 // Non-SUSE Clients
@@ -109,7 +109,7 @@ include::modules/client-configuration/pages/autoinstallation-methods.adoc[levelo
 include::modules/client-configuration/pages/client-automating-preparation.adoc[leveloffset=+1]
 include::modules/client-configuration/pages/client-automating-installation.adoc[leveloffset=+1]
 
-include::modules/client-configuration/pages/autoyast.adoc[leveloffset=+2]
+// include::modules/client-configuration/pages/autoyast.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/kickstart.adoc[leveloffset=+2]
 
