--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -139,7 +139,7 @@ If you are using {ay} to install SLES, you will also need to include this snippe
 </products>
 ----
 
-* For more on {ay}, see xref:client-configuration:autoyast.adoc[].
+* For more on {ay}, see xref:client-configuration:client-automating-installation.adoc[].
 * For more on {kickstart}, see xref:client-configuration:kickstart.adoc[], or refer to the Red Hat documentation for your installation.
 
 
