--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -85,7 +85,7 @@ For more information, see https://documentation.suse.com/sles/15-SP1/html/SLES-a
 .Procedure: Uploading an {ay} Profile
 
 Create an {ay} profile.
-For more information about {ay}, see xref:client-configuration:autoyast.adoc[].
+For more information about {ay}, see xref:client-configuration:client-automating-installation.adoc[].
 
 . In the {productname} Server {webui}, navigate to menu:Systems[Autoinstallation] and click [guimenu]``Upload Kickstart/Autoyast File``.
 . Paste the XML content in the text area or select the file to upload and click btn:[Create].
