provide back link to client-automating-preparation.adoc

--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -1,6 +1,8 @@
 [[client-cfg-autoinstallation-autoyast]]
 == Autoinstallation with {ay}
 
+When xref:client-configuration:client-automating-preparation.adoc[] is successfully finished you can begin with the actual installation.
+
 To start an autoinstallation the system must already be known to {productname}.
 You can use bare metal provisioning to bring systems into {productname}.
 For more information, see xref:reference:admin/bare-metal-systems.adoc[].
