Ref autoyast #9892 ke (#883)
* autoyast and salt
* move autoyast example from admin to client config
* instead of autoyast.adoc now reference client-automating-installation.adoc
* provide back link to client-automating-preparation.adoc
* and cosmetic bits
close https://github.com/SUSE/spacewalk/issues/9892

--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -130,7 +130,7 @@ They can also contain scripts to be executed after the installation is complete.
 {kickstart} profiles can be created using the {productname} {webui}, by navigating to menu:Systems[Autoinstallation > Profiles], clicking btn:[Create New Kickstart File], and following the prompts.
 You can also create {ay} or {kickstart} autoinstallation profiles by hand.
 
-An example {ay} profile that includes a script for registering the client with {productname} is available in xref:administration:autoyast-example.adoc[].
+An example {ay} profile that includes a script for registering the client with {productname} is available in xref:client-configuration:autoyast-example.adoc[].
 If you are using {ay} to install SLES, you will also need to include this snippet:
 
 ----
@@ -139,9 +139,9 @@ If you are using {ay} to install SLES, you will also need to include this snippe
 </products>
 ----
 
-For more on {ay}, see xref:client-configuration:autoyast.adoc[].
+* For more on {ay}, see xref:client-configuration:client-automating-installation.adoc[].
+* For more on {kickstart}, see xref:client-configuration:kickstart.adoc[], or refer to the Red Hat documentation for your installation.
 
-For more on {kickstart}, see xref:client-configuration:kickstart.adoc[], or refer to the Red Hat documentation for your installation.
 
 
 .Procedure: Uploading an Autoinstallation Profile
