--- a/modules/client-configuration/pages/registration-overview.adoc
+++ b/modules/client-configuration/pages/registration-overview.adoc
@@ -10,4 +10,4 @@ For more information, see xref:client-configuration:registration-webui.adoc[].
 For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 
 You must create an activation key first, to use one of these methods.
-For more information, see xref:lient-configuration:lients-and-activation-keys.adoc[].
+For more information, see xref:client-configuration:clients-and-activation-keys.adoc[].
