--- a/README.adoc
+++ b/README.adoc
@@ -46,6 +46,8 @@ endif::[]
 
 image:https://github.com/SUSE/doc-susemanager/workflows/build%20test%20deploy/badge.svg?branch=master["Build Status", link="https://github.com/SUSE/doc-susemanager"]
 
+image:https://github.com/SUSE/doc-susemanager/workflows/feature%20tests/badge.svg?branch=master["Build Status", link="https://github.com/SUSE/doc-susemanager"]
+
 [suma.doc.intro]
 == Introduction
 This is the source for the official SUSE Manager documentation.
