--- a/modules/administration/pages/tshoot-logintimeout.adoc
+++ b/modules/administration/pages/tshoot-logintimeout.adoc
@@ -19,7 +19,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 . Last step
 ////
 
-By default, the {productname} {webui} will require users to log in again after thirty minutes.
+By default, the {productname} {webui} will require users to log in again after 30{nbsp}minutes.
 Depending on your environment, you might want to adjust the login timeout value.
 
 To adjust the value, you will need to make the change in both [path]``rhn.conf`` and [path]``web.xml``.
