--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -19,6 +19,11 @@ ifeval::[{suma-content} == true]
 
 endif::[]
 
+[IMPORTANT]
+====
+Traditional clients are not available on {centos}{nbsp}8.￼ {centos}{nbsp}8 clients are only supported as Salt clients.
+====
+
 
 
 == Server Requirements
