--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -27,8 +27,10 @@ ifndef::backend-pdf[]
 *** xref:mirror-sources.adoc[Mirror Sources]
 // Authentication Methods
 ** xref:auth-methods.adoc[Authentication Methods]
-// Custom SSL
-** xref:ssl-certs.adoc[Custom SSL Certificates]
+// SSL Certificates
+** xref:ssl-certs.adoc[SSL Certificates]
+*** xref:ssl-certs-selfsigned.adoc[Self-Signed SSL Certificates]
+*** xref:ssl-certs-imported.adoc[Imported SSL Certificates]
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** xref:space-management.adoc[Managing Disk Space]
@@ -113,8 +115,12 @@ include::modules/administration/pages/mirror-sources.adoc[leveloffset=+1]
 // Authentication Methods
 include::modules/administration/pages/auth-methods.adoc[leveloffset=+1]
 
-// Custom SSL
+// SSL Certificates
 include::modules/administration/pages/ssl-certs.adoc[leveloffset=+1]
+
+include::modules/administration/pages/ssl-certs-selfsigned.adoc[leveloffset=+2]
+
+include::modules/administration/pages/ssl-certs-imported.adoc[leveloffset=+2]
 
 // Backing up
 include::modules/administration/pages/backup-restore.adoc[leveloffset=+1]
