--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -1,4 +1,4 @@
-[[supported-features]]
+[[supported-clients]]
 = Supported Clients
 
 {productname} is compatible with a range of client technologies.
