edits per feedback

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -70,6 +70,13 @@ configure-proxy.sh
 . Follow the prompts to complete setup.
 
 
+[NOTE]
+====
+Use the same certificate authority to sign all server certificates for servers and proxies.
+Certificates signed with different CAs will not match.
+====
+
+
 
 == Replace Certificates with a Third Party Certificate
 
