--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -3,9 +3,8 @@
 
 By default, {productname} uses a self-signed certificate.
 In this case, the certificate is created and signed by {productname}.
-This method does not use a third party certificate authority to guarantee that the details of the certificate are correct.
-
-It provides basic checking between the {productname} Server and the clients, but will not protect you against man-in-the-middle attacks.
+This method does not use an independent certificate authority to guarantee that the details of the certificate are correct.
+Third party CAs perform checks to ensure that the information contained in the certificate is correct.
 
 This section covers how to re-create your self-signed certificates on an existing installation.
 It also covers how to create new self-signed certificates and authenticate your existing clients to the new certificate, using an intermediate certificate.
@@ -21,8 +20,6 @@ Before you begin, ensure you have:
 Your key and certificate files must be in PEM format.
 
 The host name of the SSL keys and certificates must match the fully qualified host name of the machine you deploy them on.
-You can set the host names in the ``X509v3 Subject Alternative Name`` section of the certificate.
-You can also list multiple host names if your environment requires it.
 
 
 
