--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -15,10 +15,10 @@ A self-signed certificate is easy to set up, and does not cost any money, but th
 For additional security, you can arrange a third party CA to sign your certificates.
 Third party CAs perform checks to ensure that the information contained in the certificate is correct.
 They will usually charge an annual fee for this service.
-Using a third-party CA makes certificates harder to spoof, and will provide additional protection for your installation, especially against man-in-the-middle attacks.
+Using a third party CA makes certificates harder to spoof, and will provide additional protection for your installation.
 
 By default, {productname} uses a self-signed certificate.
-If you have certificates signed by a third-party CA, you can import them to your {productname} installation.
+If you have certificates signed by a third party CA, you can import them to your {productname} installation.
 
 For more on self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
 
