create dedicated uyuni-server-setup.adoc file

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -22,7 +22,12 @@ endif::[]
 //*** xref:install-proxy.adoc[Install Proxy from Packages]
 *** xref:install-ibmz.adoc[Install on IBM Z]
 ** Setting Up
+ifeval::[{suma-content} == true]
 *** xref:server-setup.adoc[Server Setup]
+endif::[]
+ifeval::[{uyuni-content} == true]
+*** xref:uyuni-server-setup.adoc[Server Setup]
+endif::[]
 *** xref:proxy-registration.adoc[Proxy Registration]
 *** xref:proxy-setup.adoc[Proxy Setup]
 *** xref:pubcloud-setup[Public Cloud Setup]
@@ -89,7 +94,12 @@ include::modules/installation/pages/install-ibmz.adoc[leveloffset=+2]
 == Setting Up
 
 // Server Setup
+ifeval::[{suma-content} == true]
 include::modules/installation/pages/server-setup.adoc[leveloffset=+2]
+endif::[]
+ifeval::[{uyuni-content} == true]
+include::modules/installation/pages/uyuni-server-setup.adoc[leveloffset=+2]
+endif::[]
 
 // Proxy Setup
 include::modules/installation/pages/proxy-registration.adoc[leveloffset=+2]
