--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -43,6 +43,8 @@ Some actions are not yet supported:
 
 Some preparation is required before you can register {ubuntu} clients to the {productname} Server.
 
+
+
 ifeval::[{suma-content} == true]
 
 .Procedure: Adding client tools channels
@@ -72,6 +74,8 @@ For example:
 
 * Base channel: [systemitem]``ubuntu-18.04-pool for amd64``
 * Child channel: [systemitem]``Ubuntu-18.04-SUSE-Manager-Tools for amd64``
+
+
 
 .Procedure: Creating Custom Repositories
 
@@ -109,6 +113,7 @@ You need all the new channels fully syncronized before bootstraping any Ubuntu c
 endif::[]
 
 
+
 ifeval::[{uyuni-content} == true]
 
 // Uyuni specific instructions, in fact this works at SUSE Manager as well, but spacewalk-common-channels script is NOT supported
@@ -132,7 +137,7 @@ ubuntu-1804-amd64-universe-uyuni ubuntu-1804-amd64-uyuni-client
 
 [IMPORTANT]
 ====
-You need all the new channels fully syncronized, including Universe (Universe contains important dependencies for salt), before bootstraping any Ubuntu client.
+You need all the new channels fully synchronized, including Universe (Universe contains important dependencies for salt), before bootstraping any Ubuntu client.
 ====
 endif::[]
 
@@ -154,6 +159,8 @@ You will need to check all the base and child channel log files to be sure that 
 
 ifeval::[{uyuni-content} == true]
 
+
+
 == Trust GPG Keys on Clients
 
 By default, {ubuntu} does not trust the GPG key for {productname} {ubuntu} client tools.
@@ -174,6 +181,8 @@ Create the salt state and assign it to the organization.
 You can then use an activation key and configuration channels to deploy the key to the clients.
 
 endif::[]
+
+
 
 == Root Access
 
