--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -137,7 +137,7 @@ ubuntu-1804-amd64-universe-uyuni ubuntu-1804-amd64-uyuni-client
 
 [IMPORTANT]
 ====
-You need all the new channels fully synchronized, including Universe (Universe contains important dependencies for salt), before bootstrapping any Ubuntu client.
+You need all the new channels fully synchronized, including Universe (Universe contains important dependencies for Salt), before bootstrapping any Ubuntu client.
 ====
 endif::[]
 
