--- a/modules/reference/pages/systems/system-details/sd-reactivation.adoc
+++ b/modules/reference/pages/systems/system-details/sd-reactivation.adoc
@@ -11,7 +11,7 @@ Reactivation keys can be combined with activation keys to aggregate the settings
 For example:
 
 ----
-rhnreg_ks --server=<server-url> \
+rhnreg_ks --server=<server-url>/XMLRPC \
           --activationkey=<reactivation-key>,<activationkey> \
           --force
 ----
