updated pdf refs

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -27,20 +27,20 @@ The following documentation is available for {productname} version {productnumbe
 For the most up-to-date version of this documentation, check https://documentation.suse.com/suma/4.0/ first.
 ====
 
-Download All PDFs icon:caret-right[] icon:file-archive[link="../susemanager-docs_en-pdf.tar.gz"]
+Download All PDFs icon:caret-right[] icon:file-archive[link="../../susemanager-docs_en-pdf.tar.gz"]
 
 
 [cols="<, ^,<,^", options="header"]
 |===
 | View HTML | View PDF | View HTML | View PDF
 
-| xref:installation:install-intro.adoc[Installation Guide]                          | icon:file-pdf[link="../pdf/suse_manager_installation_guide.pdf", window="_blank" role="green"]
-| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../pdf/suse_manager_client_configuration_guide.pdf", window="_blank" role="green"]
-| xref:upgrade:upgrade-overview.adoc[Upgrade Guide]                                 | icon:file-pdf[link="../pdf/suse_manager_upgrade_guide.pdf", window="_blank" role="green"]
-| xref:reference:intro.adoc[Reference Guide]                                        | icon:file-pdf[link="../pdf/suse_manager_reference_manual.pdf", window="_blank" role="green"]
-| xref:administration:intro.adoc[Administration Guide]                               | icon:file-pdf[link="../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
-| xref:salt:salt-intro.adoc[Salt Guide]                                             | icon:file-pdf[link="../pdf/suse_manager_salt_guide.pdf", window="_blank" role="green"]
-| xref:retail:retail-introduction.adoc[Retail Guide]                                | icon:file-pdf[link="../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
+| xref:installation:install-intro.adoc[Installation Guide]                          | icon:file-pdf[link="../../pdf/suse_manager_installation_guide.pdf", window="_blank" role="green"]
+| xref:client-configuration:client-config-overview.adoc[Client Configuration Guide] | icon:file-pdf[link="../../pdf/suse_manager_client_configuration_guide.pdf", window="_blank" role="green"]
+| xref:upgrade:upgrade-overview.adoc[Upgrade Guide]                                 | icon:file-pdf[link="../../pdf/suse_manager_upgrade_guide.pdf", window="_blank" role="green"]
+| xref:reference:intro.adoc[Reference Guide]                                        | icon:file-pdf[link="../../pdf/suse_manager_reference_manual.pdf", window="_blank" role="green"]
+| xref:administration:intro.adoc[Administration Guide]                               | icon:file-pdf[link="../../pdf/suse_manager_administration_guide.pdf", window="_blank" role="green"]
+| xref:salt:salt-intro.adoc[Salt Guide]                                             | icon:file-pdf[link="../../pdf/suse_manager_salt_guide.pdf", window="_blank" role="green"]
+| xref:retail:retail-introduction.adoc[Retail Guide]                                | icon:file-pdf[link="../../pdf/suse_manager_retail_guide.pdf", window="_blank" role="green"]
 
 //| Architecture               | xref:architecture:architecture-intro.adoc[HTML] link:../pdf/suse_manager_architecture.pdf[PDF]
 |===
