synchronizing products from {scc} is optional.
per feedback

--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -96,13 +96,18 @@ You are now presented with the {productname} menu:Home[Overview] page.
 // In the next section you will prepare the server for connecting the first client.
 
 
-== Synchronizing Products from {scc}
+== Optional: Synchronizing Products from {scc}
 
 {scc} (SCC) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
 These repositories are organized into channels each of which provide software specific to a distribution, release, and architecture.
 After synchronizing with SCC clients may receive updates, and be organized into groups and assigned to specific product software channels.
 
 This section covers synchronizing with SCC from the {webui} and adding your first client channel.
+
+[NOTE]
+====
+For Uyuni, synchronizing products from {scc} is optional.
+====
 
 Before you can synchronize software repositories with SCC, you will need to enter organization credentials in {productname}.
 In previous versions, so-called mirror credentials were used instead.
