avoid language issue

--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -20,9 +20,9 @@ In the following table replace _version_ with the actual product version string.
 | 100 GB Disk Space **)  | Disk space depends on your channel requirements
 |===
 
-* 32 GB of RAM recommended for a production environment (16 GB for a base installation).
+*) 32 GB of RAM recommended for a production environment (16 GB for a base installation).
 
-**50 GB per SUSE or openSUSE product and 360 GB per Red Hat product.
+**) 50 GB per SUSE or openSUSE product and 360 GB per Red Hat product.
 
 
 ////
